# strava-club-scraper

./: .pre-commit-config.yaml  Dockerfile  Gemfile  _config.yml  crontab-scheduler  databehandler.py  github-actions-workflow.yaml  index.md  output_with_summarized_table.html  presentator.py  pyproject.toml  readme.md  readme.old  requirements.txt  resultater.html  results.html  results.json  setup.cfg  strava-club-activities-scraper.py  strava-club-scraper.py  testdata.csv
.github/workflows/: hdir-bare-scrape.yaml  hdir-result.yaml  hdir-scrape-2.yaml  hdir-scrape.yaml  pre-commit-workflow.yaml  pre-commit.yml  skrape-to-klubber-test.yaml  skrape-to-klubber.yaml
_includes/: nav_footer_custom.html
data/: index.md
data/result/: results.json
data/skrap/: club_leaderboard.csv  club_members.csv
data/skrap/history/: 2024-3-10_13-39-club_leaderboard.csv  2024-3-10_14-29-club_leaderboard.csv  2024-3-10_18-38-club_leaderboard.csv  2024-3-10_18-9-club_leaderboard.csv  2024-3-10_23-1-club_leaderboard.csv  2024-3-11_10-2-club_leaderboard.csv  2024-3-11_17-11-club_leaderboard.csv  2024-3-11_23-2-club_leaderboard.csv  2024-3-11_7-54-club_leaderboard.csv  2024-3-12_10-1-club_leaderboard.csv  2024-3-12_20-23-club_leaderboard.csv  2024-3-12_20-45-club_leaderboard.csv  2024-3-12_21-35-club_leaderboard.csv  (+5 more)
docs/: info.md  results.md  test.md
plantuml-source/: strava-scraper-ark.puml
settings/: config.ini
static/: styles.css
strava_club_scraper/: selenium_utils.py  strava_club_scraper.py
web/: info.html  results.html
web/static/: styles.css
